--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,25 +1,22 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "files": {
+    "main.css": "./static/css/main.264da754.chunk.css",
+    "main.js": "./static/js/main.c62fc1d6.chunk.js",
+    "main.js.map": "./static/js/main.c62fc1d6.chunk.js.map",
+    "runtime-main.js": "./static/js/runtime-main.9cdc9bbb.js",
+    "runtime-main.js.map": "./static/js/runtime-main.9cdc9bbb.js.map",
+    "static/js/2.582dbd2e.chunk.js": "./static/js/2.582dbd2e.chunk.js",
+    "static/js/2.582dbd2e.chunk.js.map": "./static/js/2.582dbd2e.chunk.js.map",
+    "index.html": "./index.html",
+    "precache-manifest.8976f4775162ef4060c0f5a0338c74aa.js": "./precache-manifest.8976f4775162ef4060c0f5a0338c74aa.js",
+    "service-worker.js": "./service-worker.js",
+    "static/css/main.264da754.chunk.css.map": "./static/css/main.264da754.chunk.css.map",
+    "static/js/2.582dbd2e.chunk.js.LICENSE.txt": "./static/js/2.582dbd2e.chunk.js.LICENSE.txt"
+  },
+  "entrypoints": [
+    "static/js/runtime-main.9cdc9bbb.js",
+    "static/js/2.582dbd2e.chunk.js",
+    "static/css/main.264da754.chunk.css",
+    "static/js/main.c62fc1d6.chunk.js"
+  ]
 }
